--- a/Maximum Matchings and RNA Secondary Structures/Maximum_Matchings_and_RNA_Secondary_Structures.ipynb
+++ b/Maximum Matchings and RNA Secondary Structures/Maximum_Matchings_and_RNA_Secondary_Structures.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ/v7kGKdcwEiaPIZHo8Dk",
+      "authorship_tag": "ABX9TyNhu9Eh2NCAaHJgx09T3erz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,26 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vp9ANR4HsPCf",
-        "outputId": "47f55c5c-36a5-456b-8fe4-0d188818eaba"
+        "outputId": "abe1424e-11e8-4fe2-c0f8-59bd56a94076"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting biopython\n",
-            "  Downloading biopython-1.84-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from biopython) (1.26.4)\n",
-            "Downloading biopython-1.84-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m33.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: biopython\n",
-            "Successfully installed biopython-1.84\n"
+            "Requirement already satisfied: biopython in /usr/local/lib/python3.10/dist-packages (1.84)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from biopython) (1.26.4)\n"
           ]
         }
       ],
@@ -109,7 +104,7 @@
         "    Returns:\n",
         "        str: RNA sequence entered by the user.\n",
         "    \"\"\"\n",
-        "    choice = input(\"CHOOSE \\n (1) Do you want to input a sequence manually or \\n (2) Upload a FASTA file? \\nEnter 1 or 2: \")\n",
+        "    choice = input(\"CHOOSE \\n (1) Do you want to input a sequence manually or \\n (2) Upload a FASTA file \\nEnter 1 or 2: \")\n",
         "\n",
         "    if choice == '1':\n",
         "        seq = input(\"Please enter the RNA sequence: \").strip().upper()\n",
@@ -143,12 +138,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 177
+          "height": 142
         },
         "id": "BtJr2MFjshG-",
-        "outputId": "c6ee4af4-7d28-4371-aafb-f485ff084e0a"
+        "outputId": "fb1a12dd-4052-4805-ad25-a2cbe2e20e11"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +151,7 @@
           "text": [
             "CHOOSE \n",
             " (1) Do you want to input a sequence manually or \n",
-            " (2) Upload a FASTA file? \n",
+            " (2) Upload a FASTA file \n",
             "Enter 1 or 2: 2\n",
             "Please upload a FASTA file.\n"
           ]
@@ -169,9 +164,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-da629269-2726-466c-a9e9-3e33039ed71a\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-ecb0d919-e7ad-4a34-906f-517197a4dbd4\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-da629269-2726-466c-a9e9-3e33039ed71a\">\n",
+              "     <output id=\"result-ecb0d919-e7ad-4a34-906f-517197a4dbd4\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -359,8 +354,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving MMCH_FILE.fasta to MMCH_FILE.fasta\n",
-            "Maximum matchings for the entered sequence: 9\n"
+            "An error occurred: list index out of range\n"
           ]
         }
       ]
