--- a/Finding_a_Shared_Motif/Finding_a_Shared_Motif.ipynb
+++ b/Finding_a_Shared_Motif/Finding_a_Shared_Motif.ipynb
@@ -33,7 +33,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2bbdbc44-f0cb-4480-c58c-89524df6c159"
+        "outputId": "47b3673f-43bd-48ee-cfe4-718c6de8e667"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
             "  Downloading biopython-1.84-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (12 kB)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from biopython) (1.26.4)\n",
             "Downloading biopython-1.84-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m28.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: biopython\n",
             "Successfully installed biopython-1.84\n"
           ]
@@ -187,7 +187,22 @@
         "    print(\"No sequences found. Please check the input.\")\n",
         "else:\n",
         "    result = find_longest_common_substring(sequences)\n",
-        "    print(\"Longest common substring:\", result)\n"
+        "    print(\"Longest common substring:\", result)\n",
+        "\n",
+        "\n",
+        "#TEST CASE 1\n",
+        "\n",
+        "#expected output for the following input sample is 6\n",
+        "# >Sequence_1\n",
+        "# ATGCGT\n",
+        "# >Sequence_2\n",
+        "# GCGTAC\n",
+        "# >Sequence_3\n",
+        "# TGCGTA\n",
+        "# >Sequence_4\n",
+        "# AGCGTA\n",
+        "# >Sequence_5\n",
+        "# GCGTAA"
       ],
       "metadata": {
         "id": "Tf5_S7hKRixy",
@@ -195,9 +210,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 212
         },
-        "outputId": "108a9322-a9ff-4b3d-e22b-37d1ebc7cc96"
+        "outputId": "32f567f2-8170-408b-b120-1b1b4932841c"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,9 +235,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-f03dcf1f-c490-46cc-95fb-4c72415b3586\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-7b2acd45-6448-4f32-992f-64b6ee79af8e\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-f03dcf1f-c490-46cc-95fb-4c72415b3586\">\n",
+              "     <output id=\"result-7b2acd45-6448-4f32-992f-64b6ee79af8e\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -410,8 +425,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving sample_dataset.fasta to sample_dataset.fasta\n",
-            "Longest common substring: AGCTA\n"
+            "Saving Finding_a_Shared_Motif_test2.fasta to Finding_a_Shared_Motif_test2.fasta\n",
+            "Longest common substring: GCGT\n"
           ]
         }
       ]
